<resources>
    <string name="app_name">Travelmantics</string>
    <string name="email">Email</string>
    <string name="first_last_name"><![CDATA[First & last name]]></string>
    <string name="password">Password</string>
    <string name="save_btn">SIGN UP</string>
    <string name="welcome_signup">Welcome to Travelmantics</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="name_hint">Input name</string>
    <string name="price_hint">Price numbers only</string>
    <string name="hint_decsription">Decsription</string>
    <string name="menu_save">Save</string>
    <string name="tv_welcome">Sign up to continue</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="logout">Logout</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="upload_image">Upload Image</string>
</resources>
